--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ p {
 font-weight: 400;
 line-height: 22px; /* 137.5% */
 letter-spacing: 0.32px;
-    margin: 0;
+    margin: 0 !important;
 }
 
 section {
